--- a/main.tex
+++ b/main.tex
@@ -194,7 +194,7 @@
             \vspace*{-11mm}
             
             \begin{center}
-                \includegraphics[width=0.55\textwidth]{pictures/circ_cracha.png}
+                \includegraphics[width=0.52\textwidth]{pictures/circ_photo_01.png}
             \end{center}
 
             
