--- a/main.tex
+++ b/main.tex
@@ -214,7 +214,7 @@
             
             \begin{center}
                 \begin{tabular}{p{0.012\textwidth} p{0.478\textwidth}p{0.49\textwidth}} 
-                     & \infoitem{\href{https://www.linkedin.com/in/joe-scholtz-50293113b/}{\faLinkedin}}{\href{https://www.linkedin.com/in/joe-scholtz-50293113b/}{Joe Scholtz}} & \infoitem{\href{https://github.com/joefscholtz/}{\faGithub}}{\href{https://github.com/joefscholtz}{joefscholtz}}
+                     & \infoitem{\href{https://www.linkedin.com/in/joe-scholtz/}{\faLinkedin}}{\href{https://www.linkedin.com/in/joe-scholtz/}{Joe Scholtz}} & \infoitem{\href{https://github.com/joefscholtz/}{\faGithub}}{\href{https://github.com/joefscholtz}{joefscholtz}}
                 \end{tabular}
             \end{center}
 
